BACKLOG-38036 - Additional code to deal with class loading issues and fixed problem with multiple plugin listeners