@@ -118,13 +118,14 @@ public class PentahoSystemPluginManager implements IPluginManager {
       throws PlatformPluginRegistrationException {
     Object listener = null;
     try {
-      if ( !StringUtils.isEmpty( plugin.getLifecycleListenerClassname() ) ) {
-        listener = loader.loadClass( plugin.getLifecycleListenerClassname() ).newInstance();
+      if ( plugin.getLifecycleListenerClassnames() != null ) {
+        for ( String pluginLifecycleListener : plugin.getLifecycleListenerClassnames() )
+        listener = loader.loadClass( pluginLifecycleListener ).getDeclaredConstructor().newInstance();
       }
     } catch ( Throwable t ) {
       throw new PlatformPluginRegistrationException( Messages.getInstance().getErrorString(
           "PluginManager.ERROR_0017_COULD_NOT_LOAD_PLUGIN_LIFECYCLE_LISTENER", plugin.getId(), plugin
-              .getLifecycleListenerClassname()
+              .getLifecycleListenerClassnames()
       ), t );
     }
 
@@ -135,7 +136,7 @@ public class PentahoSystemPluginManager implements IPluginManager {
                 .getInstance()
                 .getErrorString(
                     "PluginManager.ERROR_0016_PLUGIN_LIFECYCLE_LISTENER_WRONG_TYPE", plugin.getId(),
-                    plugin.getLifecycleListenerClassname() )
+                    plugin.getLifecycleListenerClassnames() )
         ); //$NON-NLS-1$
       }
       plugin.addLifecycleListener( (IPluginLifecycleListener) listener );
